--- a/index.html
+++ b/index.html
@@ -3,5 +3,8 @@
 </head>
 <body>
 <h1>Akram Hossan Ovy</h1>
+
+<p>Mispellings and grammatical
+ errors can affect your credibility. The same goes for misused commas, and other types of punctuation .<br> Not only will Grammarly underline these issues in red, it will also showed you how to correctly write the sentence</p>
 </body>
 </html>
